--- a/music.html
+++ b/music.html
@@ -895,9 +895,9 @@
     }
 
     .nav-button {
-      background: rgba(0, 0, 0, 0.4);
-      border: 1px solid rgba(255, 255, 255, 0.2);
-      color: rgba(255, 255, 255, 0.7);
+      background: transparent;
+      border: 1px solid rgba(138, 43, 226, 0.3);
+      color: rgba(138, 43, 226, 0.7);
       border-radius: 50%;
       width: 36px;
       height: 36px;
@@ -907,13 +907,15 @@
       cursor: pointer;
       transition: all 0.3s ease;
       font-size: 0.9rem;
+      backdrop-filter: blur(5px);
     }
 
     .nav-button:hover {
-      background: rgba(255, 255, 255, 0.1);
-      border-color: rgba(255, 255, 255, 0.3);
-      color: rgba(255, 255, 255, 0.9);
+      background: rgba(138, 43, 226, 0.1);
+      border-color: rgba(138, 43, 226, 0.6);
+      color: rgba(138, 43, 226, 1);
       transform: scale(1.05);
+      box-shadow: 0 0 15px rgba(138, 43, 226, 0.3);
     }
 
     .global-play-button {
