--- a/music.html
+++ b/music.html
@@ -2002,7 +2002,7 @@
         <div class="player-controls">
           <button class="play-button">▶</button>
           <div class="track-info">
-            <div class="track-name">Trust</div>
+            <div class="track-name">Rogue</div>
             <div class="track-time">0:00 / 0:00</div>
           </div>
         </div>
