--- a/music.html
+++ b/music.html
@@ -1679,6 +1679,43 @@
     </div>
 
     <div class="tracks-grid">
+      <div class="track-card" data-track="rogue.mp3">
+        <div class="track-title">Rogue</div>
+        <div class="track-description">A wandering melody that follows its own path, weaving through unexpected territories with rebellious grace.</div>
+        <div class="waveform-visual">
+          <div class="waveform-bars">
+            <div class="waveform-bar"></div>
+            <div class="waveform-bar"></div>
+            <div class="waveform-bar"></div>
+            <div class="waveform-bar"></div>
+            <div class="waveform-bar"></div>
+            <div class="waveform-bar"></div>
+            <div class="waveform-bar"></div>
+            <div class="waveform-bar"></div>
+          </div>
+        </div>
+        <div class="player-controls">
+          <button class="play-button">▶</button>
+          <div class="track-info">
+            <div class="track-name">Rogue</div>
+            <div class="track-time">0:00 / 0:00</div>
+          </div>
+        </div>
+        <div class="progress-container">
+          <div class="progress-bar">
+            <div class="progress-fill"></div>
+          </div>
+        </div>
+        <div class="volume-container">
+          <span class="volume-icon">🔊</span>
+          <div class="volume-slider">
+            <div class="volume-fill"></div>
+          </div>
+          <span class="volume-text">70%</span>
+        </div>
+        <audio src="music/rogue.mp3" preload="metadata"></audio>
+      </div>
+
       <div class="track-card" data-track="AmbientLoop.mp3">
         <div class="track-title">Ambient Loop</div>
         <div class="track-description">Endless atmospheric textures that dissolve the boundaries between beginning and end.</div>
