--- a/music.html
+++ b/music.html
@@ -326,6 +326,98 @@
   }
 }
 
+   /* ========== NOW PLAYING BAR ========== */
+.now-playing-bar {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background: rgba(10, 10, 10, 0.9);
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0.75rem 1.25rem;
+  border-top: 1px solid rgba(255, 255, 255, 0.1);
+  opacity: 0;
+  transform: translateY(100%);
+  transition: all 0.4s ease;
+  z-index: 10;
+}
+
+.now-playing-bar.show {
+  opacity: 1;
+  transform: translateY(0%);
+}
+
+.global-play-button {
+  background: rgba(138, 43, 226, 0.4);
+  border: 2px solid rgba(138, 43, 226, 0.8);
+  color: white;
+  font-size: 1.1rem;
+  width: 42px;
+  height: 42px;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+}
+
+.now-playing-info {
+  flex: 1;
+  margin: 0 1rem;
+}
+
+.now-playing-title {
+  font-weight: bold;
+  color: #f0f0f0;
+  margin-bottom: 0.3rem;
+}
+
+.now-playing-progress {
+  width: 100%;
+  height: 4px;
+  background: rgba(255, 255, 255, 0.2);
+  border-radius: 2px;
+  overflow: hidden;
+}
+
+.now-playing-fill {
+  height: 100%;
+  background: rgba(138, 43, 226, 0.7);
+  width: 0%;
+}
+
+.track-counter {
+  font-size: 0.9rem;
+  color: rgba(255, 255, 255, 0.6);
+  min-width: 60px;
+  text-align: right;
+}
+
+/* ========== BACK TO TOP BUTTON ========== */
+.back-to-top {
+  position: fixed;
+  bottom: 80px;
+  right: 20px;
+  background: rgba(255, 255, 255, 0.1);
+  color: white;
+  font-size: 1.3rem;
+  padding: 0.6rem 1rem;
+  border-radius: 50%;
+  cursor: pointer;
+  opacity: 0;
+  transform: translateY(30px);
+  transition: all 0.3s ease;
+  z-index: 10;
+}
+
+.back-to-top.show {
+  opacity: 1;
+  transform: translateY(0);
+}
+
+
   </style>
 </head>
 
